--- a/requirements.txt
+++ b/requirements.txt
@@ -39,9 +39,6 @@ python-dateutil==2.9.0
 pytest==8.1.0
 pytest-asyncio==0.23.5
 
-# Database Drivers (choose based on your database)
-# PostgreSQL - using asyncpg for better serverless compatibility
-asyncpg==0.29.0
+# Database Drivers
+# PostgreSQL - using psycopg2-binary for maximum compatibility
 psycopg2-binary==2.9.9
-# MySQL (optional)
-# pymysql==1.1.0
